// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collection > should render connected component 1`] = `
<DocumentFragment>
  <div
    class="css-vy6zu8"
  >
    <mock-sidebar
      collection="[object Object]"
      collections="[object Object]"
      filterterm=""
      issearchenabled=""
      searchterm=""
    />
    <main
      class="css-1tn45xb"
    >
      <mock-collection-top
        collection="[object Object]"
        newentryurl=""
      />
      <mock-collection-controls
        filter="[object Object]"
        group="[object Object]"
        sortablefields=""
        viewfilters=""
        viewgroups=""
      />
      <mock-entries-collection
        collection="[object Object]"
        filterterm=""
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection > should render with collection with create url 1`] = `
<DocumentFragment>
  <div
    class="css-vy6zu8"
  >
    <mock-sidebar
      collection="[object Object]"
      collections="[object Object]"
      filterterm=""
      issearchenabled=""
      searchterm=""
    />
    <main
      class="css-1tn45xb"
    >
      <mock-collection-top
        collection="[object Object]"
        newentryurl="/collections/pages/new"
      />
      <mock-collection-controls
        filter="[object Object]"
        group="[object Object]"
        sortablefields=""
        viewfilters=""
        viewgroups=""
      />
      <mock-entries-collection
        collection="[object Object]"
        filterterm=""
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection > should render with collection with create url and path 1`] = `
<DocumentFragment>
  <div
    class="css-vy6zu8"
  >
    <mock-sidebar
      collection="[object Object]"
      collections="[object Object]"
      filterterm="dir1/dir2"
      issearchenabled=""
      searchterm=""
    />
    <main
      class="css-1tn45xb"
    >
      <mock-collection-top
        collection="[object Object]"
        newentryurl="/collections/pages/new?path=dir1/dir2"
      />
      <mock-collection-controls
        filter="[object Object]"
        group="[object Object]"
        sortablefields=""
        viewfilters=""
        viewgroups=""
      />
      <mock-entries-collection
        collection="[object Object]"
        filterterm="dir1/dir2"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection > should render with collection without create url 1`] = `
<DocumentFragment>
  <div
    class="css-vy6zu8"
  >
    <mock-sidebar
      collection="[object Object]"
      collections="[object Object]"
      filterterm=""
      issearchenabled=""
      searchterm=""
    />
    <main
      class="css-1tn45xb"
    >
      <mock-collection-top
        collection="[object Object]"
        newentryurl=""
      />
      <mock-collection-controls
        filter="[object Object]"
        group="[object Object]"
        sortablefields=""
        viewfilters=""
        viewgroups=""
      />
      <mock-entries-collection
        collection="[object Object]"
        filterterm=""
      />
    </main>
  </div>
</DocumentFragment>
`;
